# cppsandbox

./: .gitignore  CMakeLists.txt  README.md  demo_class_template.cpp  demo_class_template.h  demo_constexpr.h  demo_enum_class.h  demo_lambda.h  demo_optional.h  demo_ranges.h  demo_smart_ptrs.h  demo_span.h  demo_structured_bindings.h  demo_variants.h  main  main.cpp  struct_demo.cpp  struct_demo.h
boost_demo/: boost_test.cpp  copilot_test.cpp  copilot_test.h
circular_pointer_demo/: mutual_pointer.cpp  mutual_pointer.h  reductive_version.h
gmock_demo/: Painter.h  gmock_test.cpp  mock_turtle.cpp  turtle.h
gtest/: shared_ptr_tests.cpp
gtest_demo/: shared_ptr_tests.cpp
leetcode/: zigzag_tests.cpp
sequences/: integer_seq.h
